--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-calendar": "^4.3.0",
+    "react-data-table-component": "^7.5.3",
     "react-datepicker": "^4.15.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
     "sass": "^1.63.6",
