--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
+    "react-search-box": "^3.0.0",
     "sass": "^1.63.6",
     "styled-components": "^6.0.2",
     "web-vitals": "^2.1.4"
@@ -31,7 +32,7 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "docs": "jsdoc src"
+    "docs": "jsdoc src -d docs"
   },
   "eslintConfig": {
     "extends": [
