--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "banby-modal-customize-react": "^0.1.12",
     "react": "^18.2.0",
     "react-calendar": "^4.3.0",
     "react-data-table-component": "^7.5.3",
@@ -53,7 +54,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/cli": "^7.22.9",
+    "@babel/core": "^7.22.9",
     "@babel/plugin-proposal-private-property-in-object": "^7.16.0",
+    "babel-preset-react-app": "^10.0.1",
     "faker": "^6.6.6",
     "gh-pages": "^5.0.0",
     "jsdoc": "^4.0.2"
