--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "banby-modal-customize-react": "^0.1.12",
+    "banby-modal-customize-react": "^0.1.17",
     "react": "^18.2.0",
     "react-calendar": "^4.3.0",
     "react-data-table-component": "^7.5.3",
@@ -19,9 +19,11 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-paginate": "^8.2.0",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
     "react-search-box": "^3.0.0",
+    "redux": "^4.2.1",
     "sass": "^1.63.6",
     "styled-components": "^6.0.2",
     "web-vitals": "^2.1.4"
