--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
     "@reduxjs/toolkit": "^1.9.5",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "banby-modal-customize-react": "^0.1.21",
     "react": "^18.2.0",
@@ -59,9 +57,13 @@
     "@babel/cli": "^7.22.9",
     "@babel/core": "^7.22.9",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@testing-library/jest-dom": "^6.0.1",
+    "@testing-library/react": "^14.0.0",
     "babel-preset-react-app": "^10.0.1",
     "gh-pages": "^5.0.0",
     "http-server": "^14.1.1",
-    "jsdoc": "^4.0.2"
+    "jest": "^29.6.3",
+    "jsdoc": "^4.0.2",
+    "redux-mock-store": "^1.5.4"
   }
 }
