--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://pascalinecte91.github.io/Wealth_Health_P14",
+  "homepage": "https://pascalinecte91.github.io/",
   "name": "wealth_health",
   "version": "0.1.0",
   "private": true,
